--- a/recipes/sarma.html
+++ b/recipes/sarma.html
@@ -18,6 +18,7 @@
             <li>Blood of enemies</li>
         </ul>
 
+        <h3>Steps</h3>
         <ol>
             <li>Put enemies in pit</li>
             <li>Let cabbage monster out of the cage</li>
