--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <a href="recipes/boiled-water.html">Boiled water</a>
             </p>
             <img src="https://media.tenor.com/XbAS13ALk-QAAAAC/boil-water-boiling-water.gif">
+            <p>
+                <a href="css-part-two.html">Lesson 2</a>
+            </p>
 
     </body>
 </html>
