--- a/recipes/sarma.html
+++ b/recipes/sarma.html
@@ -8,6 +8,7 @@
                 background-color: green;
                 color: white;
                 font-size: 18px;
+                display: inline-block;
             }
         </style>
     </head>
