--- a/css-part-two.html
+++ b/css-part-two.html
@@ -7,9 +7,9 @@
 <body>
     <h1>Practice lesson CSS 2</h1>
 
-    <p>Number 1 im a class</p>
+    <p class="Num1">Number 1 im a class</p>
     <div class="Num2">Number 2 im one ID</div>
-    <p>Numer 3 im another class but cooler</p>
-    <div>Number 4 im a ID</div>
-    <p>Number 5 im a clas!</p>
+    <p class="Num1", id=Num3>Numer 3 im another class but cooler</p>
+    <div id="Num4">Number 4 im a ID</div>
+    <p class="Num1">Number 5 im a class!</p>
 </body>
