--- a/css-part-two.html
+++ b/css-part-two.html
@@ -2,6 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/home/nikola/repos/odin-recipes/styletwo.css">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+
 </head>
 
 <body>
