--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin recipes</title>
+        <link rel="stylesheet" href="/home/nikola/repos/odin-recipes/styletwo.css">
+
     </head>
 
     <body>
