--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Odin recipes</title>
         <link rel="stylesheet" href="/home/nikola/repos/odin-recipes/styletwo.css">
+        <link rel="stylesheet" href="/home/nikola/repos/odin-recipes/style.css">
 
     </head>
 
