--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <p>
                 <a href="css-part-two.html">Lesson 2</a>
             </p>
+            <p>
+                <a href="css-part-three.html">Lesson 3</a>
+            </p>
 
     </body>
 </html>
