--- a/index.html
+++ b/index.html
@@ -2,39 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin recipes</title>
-        <link rel="stylesheet" href="/home/nikola/repos/odin-recipes/style.css">
-
-
+        <title>Hello</title>
+        <link rel="stylesheet" href="style.css">
 
     </head>
-
     <body>
-        <h1>Odin recipes</h1>
-            <p>
-                <a href="recipes/sarma.html">Sarma</a>
-            </p>
-
-            <p>
-                <img src="https://thumbs.gfycat.com/ForcefulKlutzyHadrosaurus-size_restricted.gif">
-            </p>
-
-            <p>
-            <a href="recipes/ice-cubes.html">Ice cubes</a>
-            </p>
-            <p>
-                <img src="https://media3.giphy.com/media/op2Br9pDuAIQo/giphy.gif">
-            </p>
-            <p>
-                <a href="recipes/boiled-water.html">Boiled water</a>
-            </p>
-            <img src="https://media.tenor.com/XbAS13ALk-QAAAAC/boil-water-boiling-water.gif">
-            <p>
-                <a href="css-part-two.html">Lesson 2</a>
-            </p>
-            <p>
-                <a href="css-part-three.html">Lesson 3</a>
-            </p>
-
+        <button id="myButton" class="click">Click me!</button>
+        <button id="myButton1" class="click">No, click me!</button>
     </body>
 </html>
